// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decorator Should able to decorate class multiple 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [
    Object {
      "info": "Some Info",
    },
    Object {
      "otherInfo": "Some Other Info",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate class using callback 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [
    Object {
      "name": "DummyClass",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate constructor parameter 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
      ],
      "kind": "Parameter",
      "name": "id",
      "type": [Function],
    },
  ],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate constructor parameter 2`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [
        Object {
          "index": 0,
          "name": "constructor",
          "target": "DummyClass",
        },
      ],
      "kind": "Parameter",
      "name": "id",
      "type": [Function],
    },
  ],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate constructor parameter multiple 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
        Object {
          "otherInfo": "Some Other Info",
        },
      ],
      "kind": "Parameter",
      "name": "id",
      "type": [Function],
    },
  ],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate method multiple 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
        Object {
          "otherInfo": "Some Other Info",
        },
      ],
      "kind": "Function",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate method multiple 2`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
        Object {
          "otherInfo": "Some Other Info",
        },
      ],
      "kind": "Function",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate method parameter 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Function",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Some Info",
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "type": [Function],
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate method parameter multiple 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Function",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Some Info",
            },
            Object {
              "otherInfo": "Some Other Info",
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "type": [Function],
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should able to decorate method parameter with callback 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Function",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "index": 0,
              "name": "method",
              "target": "DummyClass",
            },
          ],
          "kind": "Parameter",
          "name": "id",
          "type": [Function],
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should decorate class 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [
    Object {
      "info": "Some Info",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should decorate method 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
      ],
      "kind": "Function",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should decorate method 2`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "info": "Some Info",
        },
      ],
      "kind": "Function",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should decorate method with callback 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "method": "method",
          "target": "DummyClass",
        },
      ],
      "kind": "Function",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should decorate method with callback 2`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "method": "method",
          "target": "DummyClass",
        },
      ],
      "kind": "Function",
      "name": "method",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Decorator Should inspect class with get set 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": [Function],
      "kind": "Property",
      "name": "data",
      "set": [Function],
      "type": undefined,
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect class with get set with decorator 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": [Function],
      "kind": "Property",
      "name": "data",
      "set": [Function],
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect class with get set with decorator callback 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "data",
          "target": [Function],
        },
      ],
      "get": [Function],
      "kind": "Property",
      "name": "data",
      "set": [Function],
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect class with get set with decorator multiple 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
        },
        Object {
          "value": 1,
        },
      ],
      "get": [Function],
      "kind": "Property",
      "name": "data",
      "set": [Function],
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect class with properties 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect class with properties multiple 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
        },
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect class with properties with callback 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "dummyProp",
          "target": [Function],
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "dummyProp",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect constructor property 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [],
      "kind": "Parameter",
      "name": "data",
      "type": [Function],
    },
  ],
  "decorators": Array [
    Object {
      "type": "AutoProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect constructor property with decorator 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "kind": "Parameter",
      "name": "data",
      "type": [Function],
    },
  ],
  "decorators": Array [
    Object {
      "type": "AutoProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect constructor property with decorator callback 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "constructor",
          "target": [Function],
        },
      ],
      "kind": "Parameter",
      "name": "data",
      "type": [Function],
    },
  ],
  "decorators": Array [
    Object {
      "type": "AutoProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "name": "constructor",
          "target": [Function],
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should inspect constructor property with decorator multiple 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
        },
        Object {
          "value": 1,
        },
      ],
      "kind": "Parameter",
      "name": "data",
      "type": [Function],
    },
  ],
  "decorators": Array [
    Object {
      "type": "AutoProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "value": 2,
        },
        Object {
          "value": 1,
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;

exports[`Decorator Should not inspect private constructor property 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [],
      "kind": "Parameter",
      "name": "data",
      "type": [Function],
    },
    Object {
      "decorators": Array [
        Object {
          "kind": "Private",
        },
      ],
      "kind": "Parameter",
      "name": "myPrivateField",
      "type": [Function],
    },
  ],
  "decorators": Array [
    Object {
      "type": "AutoProperties",
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [
    Object {
      "decorators": Array [],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": [Function],
    },
  ],
  "type": [Function],
}
`;
